<resources>
    <string name="app_name">SYM - Labo 4</string>

    <string name="nav_4">Capteurs</string>
    <string name="nav_5">BLE</string>

    <string name="ble_menu_search">Recherche</string>
    <string name="ble_menu_disconnect">Déconnexion</string>

    <string name="ble_empty">Veuillez lancer le scan <i>Bluetooth Low Energy</i> en appuyant ci-dessus</string>

    <string name="ble_currenttime_title">Current time</string>
    <string name="ble_currenttime_set">Set time</string>
    <string name="ble_clickcounter_title">Click counter</string>
    <string name="ble_temperature_title">Température</string>
    <string name="ble_temperature_read">Read</string>

    <string name="ble_sendvalue_title">Envoi de valeur</string>
    <string name="ble_sendvalue_send">Send</string>

    <string name="ble_title_device_section1">Informations périphérique</string>
    <string name="ble_title_device_section2">Actions</string>
    <string name="ble_send_int">Envoi d\'un nombre aléatoire</string>
    <string name="ble_send_hour">Mise à jour de l\'heure</string>
    <string name="ble_get_temp">Récupérer la température</string>

    <string name="ble_label_temp">Température: %1$s</string>
    <string name="ble_label_count">Bouton: %1$s</string>
    <string name="ble_label_date">Date: %1$s</string>


</resources>
