<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ch.heigvd.iict.sym_labo4.BleActivity">

    <ScrollView
        android:id="@+id/ble_operation"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="64dp" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="321dp"
                android:layout_height="wrap_content"
                android:text="@string/ble_title_device_section1"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/temperature_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ble_label_temp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/time_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ble_label_date" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/btn_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ble_label_count" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ble_title_device_section2"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <Button
                android:id="@+id/update_date_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ble_send_hour" />

            <Button
                android:id="@+id/send_integer_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ble_send_int" />

            <Button
                android:id="@+id/get_temperature_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ble_get_temp" />
        </LinearLayout>

    </ScrollView>

    <RelativeLayout
        android:id="@+id/ble_scan"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ListView
            android:id="@+id/ble_scanresults"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical" >

        </ListView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/ble_scanresults_empty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/ble_empty"
                android:textColor="#455A64" />

            <ProgressBar
                android:id="@+id/ble_scanning"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />
        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>
